--- a/package.json
+++ b/package.json
@@ -4,21 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "task1": "nodemon task1.ts",
-    "task2": "nodemon task2.ts",
-    "task3": "nodemon task3.ts"
+    "test": "jest",
+    "coverage": "jest --collect-coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/csvtojson": "^2.0.0",
+    "axios": "^1.6.3",
     "csvtojson": "^2.0.10",
     "nodemon": "^3.0.1",
     "nvm": "^0.0.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
