--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.6.3",
     "csvtojson": "^2.0.10",
     "nodemon": "^3.0.1",
-    "nvm": "^0.0.4"
+    "nvm": "^0.0.4",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
