--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "test": "jest",
     "coverage": "jest --collect-coverage"
