--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.ts",
   "scripts": {
     "test": "jest",
-    "coverage": "jest --collect-coverage"
+    "coverage": "jest --collect-coverage",
+    "start": "nodemon server.ts"
   },
   "keywords": [],
   "author": "",
