--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/csvtojson": "^2.0.0",
-    "axios": "^1.6.3",
     "body-parser": "^1.20.2",
-    "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "joi": "^17.12.1",
-    "lodash": "^4.17.21",
     "nodemon": "^3.0.1",
     "nvm": "^0.0.4",
+    "pg": "^8.11.3",
     "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
