--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: 'your@email.com'
-      PGADMIN_DEFAULT_PASSWORD: 'HF2f2fjf3'
+      PGADMIN_DEFAULT_PASSWORD: '123456'
     ports:
       - '5050:80'
 
