--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "nodemon": "^3.0.1",
     "nvm": "^0.0.4",
     "pg": "^8.11.3",
+    "sequelize": "^6.37.0",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
-    "typeorm": "^0.3.20",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
