--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.12.1",
+    "mongoose": "^8.2.0",
     "nodemon": "^3.0.1",
     "nvm": "^0.0.4",
     "pg": "^8.11.3",
