--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "sequelize-cli": "^6.6.2",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
